--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-PROVIDER_URLS="https://eth-mainnet.alchemyapi.io/v2/YOUR_ALCHEMY_ID"  # your provider URLS seperated by comma 
+PROVIDER_URLS="https://rpc.dev.buildbear.io/YOUR_NODE_ID" 
 PRIVATE_KEY="" ## Optional: Only needed if you wish to create a task from the CLI instead of the UI
-RPC="" ## PRC FOR ANVIL FORK
