--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-PROVIDER_URLS="https://rpc.dev.buildbear.io/YOUR_NODE_ID" 
-PRIVATE_KEY="" ## Optional: Only needed if you wish to create a task from the CLI instead of the UI
+PROVIDER_URLS="hADD YOUR RPC URL HERE" 
+PRIVATE_KEY="ADD YOUR PRIVATE KEY HERE"
